[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langmonitor"
version = "0.1.0"
description = "Real-time observability and operator controls for LangGraph agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akash Nath", email = "anath5440@gmail.com" }]
keywords = ["langgraph", "langchain", "llm", "agents", "observability", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "deepdiff>=7.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
langmonitor = "langmonitor.main:main"

[project.urls]
Homepage = "https://github.com/Akash-nath29/langmonitor"
Repository = "https://github.com/Akash-nath29/langmonitor"

# The package modules live in the repository root, so the top-level
# `langmonitor` package is mapped to "." and every sub-package is listed
# explicitly. (Editable installs and wheels both honour this mapping.)
[tool.setuptools]
package-dir = { "langmonitor" = "." }
packages = [
    "langmonitor",
    "langmonitor.api",
    "langmonitor.api.routes",
    "langmonitor.engine",
    "langmonitor.engines",
    "langmonitor.models",
    "langmonitor.schemas",
    "langmonitor.sdk",
]
